syntax = "proto3";
package tictactoe;

option go_package = "github.com/kertox662/game-site/proto/games/tictactoe";

message Move {
  int32 row = 1;
  int32 col = 2;
}

message GameMetadata {
  string id = 1;
  int32 player_count = 2;
  repeated string players = 3;
  int32 max_players = 4;
  int32 board_size = 5;
  int32 connect_to_win = 6;
  int32 current_turn = 7;
  int32 winner = 8;
}
