syntax = "proto3";
package tictactoe;

import "proto/games/tictactoe/board.proto";
import "proto/games/tictactoe/model.proto";

option go_package = "github.com/kertox662/game-site/proto/games/tictactoe";

message CreateGameRequest {
  int32 max_players = 1;
  int32 board_size = 2;
  int32 connect_target = 3;
}

message CreateGameResponse {
  string game_id = 1;
}

message GetGameDataRequest {
  string game_id = 1;
}

message GetGameDataResponse {
  Board data = 1;
  GameMetadata metadata = 2;
}

message MakeMoveRequest {
  string game_id = 1;
  int32 player = 2;
  Move move = 3;
}

message MakeMoveResponse {
}

message ListGamesRequest {
}

message ListGamesResponse {
  repeated GameMetadata games = 1;
}

service TicTacToeService {
  rpc CreateGame(CreateGameRequest) returns (CreateGameResponse);
  rpc GetGameData(GetGameDataRequest) returns (GetGameDataResponse);
  rpc MakeMove(MakeMoveRequest) returns (MakeMoveResponse);
  rpc ListGames(ListGamesRequest) returns (ListGamesResponse);
}
